fixed padding issue that was causing breaks in large nav as well as requested updates to templates by dev
new templates for index interior, fixed a padding issue in large nav that was causing menu break. Removed schema from all phone numbers except footer number. fixed a issue with logo webp. added a mobile only cta in templates.  added vars.scss to master theme call for design workflow ease of use.

--- a/layouts/css/site-theme/_navigation-large.scss
+++ b/layouts/css/site-theme/_navigation-large.scss
@@ -191,7 +191,7 @@ $animations-duration: 190ms;
 					& > a {
 						display: inline-flex;
 						align-items: center;
-						padding: 0.75rem;
+						padding: 0.75rem 0;
 						& > .nav-v2-1-spin-chevron {
 							margin-left: 6px;
 							& > i {
