--- a/layouts/css/site-theme/master-theme.css
+++ b/layouts/css/site-theme/master-theme.css
@@ -1,7 +1,5 @@
 @charset "UTF-8";
 /* Defining Theme Colors - these must match the custom.scss colors during design phase ********* */
-/* ********************************************************************************************* */
-/* SASS VARIABLES SETUP ************************************************************************ */
 @font-face {
   font-family: 'Futura-Bold';
   src: url(../../fonts/Futura-Bold.otf);
@@ -18,63 +16,6 @@
 /* ********************************************************************************************* */
 /* Always Make Sure to Repeat These in the Top of Master-Theme.scss file *********************** */
 /* ******************************************************************************************** */
-/* ********************************************************************************************* */
-/* ********************************************************************************************* */
-/* CUSTOM SCSS FOR THIS PARTICULAR LAYOUT ****************************************************** */
-/* ********************************************************************************************* */
-/* Top Navigation Phone Number ***************************************************************** */
-.call-num, .req-serv {
-  color: #23395B !important;
-  transition: all 0.5s ease; }
-  .call-num:hover, .req-serv:hover {
-    color: #406E8E !important; }
-
-/* H3 Request Form Link ************************************************************************ */
-.req-num, .req-form {
-  color: #406E8E !important;
-  transition: all 0.5s ease; }
-  .req-num:hover, .req-form:hover {
-    color: #23395B !important; }
-
-/* Background Color for Contact Form Sidebar *************************************************** */
-#bg-sidebar {
-  background-color: rgba(35, 57, 91, 0.65);
-  box-sizing: border-box; }
-
-/* Background Image Initial Set Up ************************************************************* */
-#bg-reviews .bg-picture-container {
-  background-attachment: scroll;
-  background-position: center;
-  background-size: cover;
-  min-height: 500px; }
-  @media screen and (max-width: 992px) {
-    #bg-reviews .bg-picture-container {
-      min-height: 400px; } }
-  @media screen and (max-width: 768px) {
-    #bg-reviews .bg-picture-container {
-      min-height: 300px; } }
-
-/* Overlay Service Boxes Headers *************************************************************** */
-.overlay-title {
-  font-family: Futura-Bold, sans-serif;
-  font-weight: normal;
-  font-size: inherit;
-  text-transform: uppercase;
-  text-decoration: none;
-  text-align: center;
-  box-sizing: border-box;
-  margin-bottom: 0;
-  color: #FFFFFF; }
-
-.bgcover {
-  background-attachment: fixed !important;
-  background-size: cover !important; }
-  .bgcover p {
-    color: #FFFFFF !important; }
-  @media screen and (max-width: 992px) {
-    .bgcover {
-      background-attachment: scroll !important; } }
-
 /* ********************************************************************************************* */
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
@@ -16636,7 +16577,7 @@ html.lb-disable-scrolling {
     #lg-nav-v2-1 .nav-lg #nav-v2-1-contents #nav-v2-1-links > .nav-v2-1-link > a {
       display: inline-flex;
       align-items: center;
-      padding: 0.75rem; }
+      padding: 0.75rem 0; }
       #lg-nav-v2-1 .nav-lg #nav-v2-1-contents #nav-v2-1-links > .nav-v2-1-link > a > .nav-v2-1-spin-chevron {
         margin-left: 6px; }
         #lg-nav-v2-1 .nav-lg #nav-v2-1-contents #nav-v2-1-links > .nav-v2-1-link > a > .nav-v2-1-spin-chevron > i {
